Transform app to coquette style and simplify functionality

--- a/index.html
+++ b/index.html
@@ -3,24 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Schedule App</title>
+    <title>My Daily Tasks ♡</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="app-container">
         <header class="app-header">
-            <h1>My Schedule</h1>
-            <button id="addTaskBtn" class="add-task-btn">
-                <i class="fas fa-plus"></i> Add Task
-            </button>
+            <h1>♡ My Daily Tasks ♡</h1>
         </header>
 
         <div class="schedule-container">
             <div class="schedule-filters">
                 <button class="filter-btn active" data-filter="all">All</button>
                 <button class="filter-btn" data-filter="today">Today</button>
-                <button class="filter-btn" data-filter="week">This Week</button>
             </div>
 
             <div class="tasks-list" id="tasksList">
