--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Daily Tasks ♡</title>
+    <title>✧ My Daily Tasks ✧</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
 <body>
     <div class="app-container">
         <header class="app-header">
-            <h1>♡ My Daily Tasks ♡</h1>
+            <h1>✧ My Daily Tasks ✧</h1>
         </header>
 
         <div class="schedule-container">
