Add date navigation, stats, and cute animations

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
     <div class="app-container">
         <header class="app-header">
-            <h1>✧ My Daily Tasks ✧</h1>
+            <h1>My Daily Schedule ✨</h1>
         </header>
 
         <div class="schedule-container">
             <div class="schedule-filters">
-                <button class="filter-btn active" data-filter="all">All</button>
+                <button class="filter-btn active" data-filter="all">All Tasks</button>
                 <button class="filter-btn" data-filter="today">Today</button>
             </div>
 
