Fix missing formatDate function and HTML structure

--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
             <h1>My Daily Schedule ✨</h1>
         </header>
 
-        <div class="schedule-container">
-            <div class="schedule-filters">
-                <button class="filter-btn active" data-filter="all">All Tasks</button>
-                <button class="filter-btn" data-filter="today">Today</button>
-            </div>
+        <div class="schedule-filters">
+            <button class="filter-btn active" data-filter="all">All Tasks</button>
+            <button class="filter-btn" data-filter="today">Today</button>
+        </div>
 
-            <div class="tasks-list" id="tasksList">
-                <!-- Tasks will be added here dynamically -->
-            </div>
+        <div id="tasksList" class="tasks-list">
+            <!-- Tasks will be added here dynamically -->
         </div>
     </div>
     <script src="js/app.js"></script>
