--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A cute daily task manager with a coquette style">
     <title>✧ My Daily Tasks ✧</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="app-container">
@@ -24,6 +23,7 @@
             <!-- Tasks will be added here dynamically -->
         </div>
     </div>
-    <script src="js/app.js"></script>
+
+    <script defer src="js/app.js"></script>
 </body>
 </html> 
