--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A cute daily task manager with a coquette style">
-    <title>✧ My Daily Tasks ✧</title>
+    <meta name="description" content="Du gillar Mohammed">
+    <title>✧ Gooshy's schema ✧</title>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="app-container">
         <header class="app-header">
-            <h1>My Daily Schedule ✨</h1>
+            <h1>Gooshy's schema ✨</h1>
         </header>
 
         <div id="tasksList" class="tasks-list">
